fix: use same scrollbar width for extension detail and editor

--- a/static/css/parts/ViewletExtensionDetail.css
+++ b/static/css/parts/ViewletExtensionDetail.css
@@ -13,7 +13,7 @@
 }
 
 .ExtensionDetail::-webkit-scrollbar {
-  width: 10px;
+  width: 14px;
 }
 
 .ExtensionDetail::-webkit-scrollbar-track {
